# lzt-api-rs

./: .gitignore  ADAPTIVE_RETRY.md  Cargo.toml  IMPLEMENTATION_STATUS.md  QWEN.md  README.md  build.rs  run_tests.sh  testnet.txt
.github/workflows/: ci.yml
examples/: basic_usage.rs  forum_example.rs  market_example.rs  test_api.rs
lolzteam-api-rs-main/: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
lolzteam-api-rs-main/codegen/: Cargo.toml
lolzteam-api-rs-main/codegen/src/: main.rs
lolzteam-api-rs-main/examples/: basic.rs  forum_categories.rs  forum_misc.rs  forum_threads.rs  forum_users.rs  market_categories.rs  market_profile.rs  proxy.rs
lolzteam-api-rs-main/src/: error.rs  lib.rs  models.rs
lolzteam-api-rs-main/src/forum/: methods.rs  mod.rs  types.rs
lolzteam-api-rs-main/src/market/: methods.rs  mod.rs  types.rs
lolzteam-api-rs-main/tests/: integration_test.rs
src/: client.rs  error.rs  lib.rs  models.rs  proxy.rs  retry.rs
src/codegen/: main.rs
src/forum/: methods.rs  mod.rs  types.rs
src/market/: methods.rs  types.rs
