[package]
name = "lzt-api"
version = "1.0.0"
edition = "2021"
authors = ["Lolzteam API Contributors"]
description = "Production-ready Rust API wrapper for Lolzteam Forum and Market services"
license = "MIT"
repository = "https://github.com/lolzteam/lzt-api-rs"
homepage = "https://github.com/lolzteam/lzt-api-rs"
documentation = "https://docs.rs/lzt-api"
keywords = ["api", "lolzteam", "forum", "market", "async"]
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", features = ["json", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
url = "2.4"
base64 = "0.21"
urlencoding = "2.1"
serde_urlencoded = "0.7"

[dev-dependencies]
tokio-test = "0.4"

[build-dependencies]
openapiv3 = "2.0"
serde_json = "1.0"

[[bin]]
name = "codegen"
path = "src/codegen/main.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "forum_example"
path = "examples/forum_example.rs"

[[example]]
name = "market_example"
path = "examples/market_example.rs"
