[package]
name = "lolzteam"
version = "0.1.0"
edition = "2021"
description = "Rust client for LOLZTEAM Forum & Market API"
license = "MIT"
readme = "README.md"
keywords = ["lolzteam", "lolz", "api", "market"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[workspace]
members = [".", "codegen"]
